tests/fixtures/invalid/pow_bytes_none_bool.py
# Cannot call pow() with Bytes, None, Bool
x = pow(b"hello", None, True)
